fix spacing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -151,7 +151,7 @@
   }
 
   #libraryReadMe a img {
-    @apply inline m-1;
+    @apply inline;
   }
 
   code,
